@startuml ComfyChair

skinparam ClassAttributeIconSize 0

class User {
    -_name: String
    -_affiliation: String
    -_email: String
    -_password: String
}

class Conference{
    -_name: String
    -_chairs: User[]
    -_sessions: Session[]
    +name()
    +addChairs()
    +sessions()
    +addSession()
}

class Session{
    -_state: SessionState
    -_programCommittee: User[]
    -_papers : Paper []
    -_bids: Bid []
    -_assignments: Map <Paper,User[]>
    -_reviewers: User []
    -_acceptanceStrategy: AcceptanceStrategy

    +submit()
    +closeSubmissions()
    +enterBid()
    +closeBidAndAssign()
    +addReview()
    +closeReviewing()
    +selectPapers()

    +canSubmit()
    +assignmentsFor()
    +isAssigned()
    +interestFor()

    +transitionTo()
    +setAcceptanceStrategy()
}

class Bid {
    -_paper: Paper
    -_reviewer: User
    -_interest: Interest

    +paper()
    +reviewer()
    +interest()
    +setInterest()
}

abstract class Paper {
    -_title: String
    -_authors: User[]
    -_correspondingAuthor: User
    -_reviews: Review[]
    
    +title()
    +reviews()

    +isValid() : Boolean
    +addReview()
    +reviewsCount()
    +score()
}

class Review{
    -_reviewer: User
    -_text: String
    -_score: int 
}


class RegularPaper {
    -_abstract:String

    +abstract()
    +setAbstract()
    +abstractWordCount()
    +isValid(): Boolean
}

class Poster {
    -_attachmentUrl:String
    -_sourcesUrl: String

    +attachmentUrl()
    +sourceUrl()
    
}

enum Interest{
    Interested
    Maybe
    NotInterested
}



Paper <|-- RegularPaper
Paper <|-- Poster

Conference "1" -- "*" Session
Conference "*" -- "*" User : chairs

Session "1" -- "*" Paper
Session "1" -- "*" Bid
Session "*" -- "*" User : reviewers
Session o-- AcceptanceStrategy

Paper "*" -- "*" User : authors
Paper "1" -- "*" Review
Paper "*" -- "1" User : correspondingAuthor

Review "*" -- "1" User : reviewer

Bid "*" -- "1" User : reviewer
Bid "*" -- "1" Paper : paper


'============ STRATEGY PATTERN ============

abstract class AcceptanceStrategy{
    +accept(papers)
}

class AcceptanceByPercentage{
    -_percentage: float
    +accept(papers)
}

class AcceptanceByCount{
    -_count: int 
    +accept(papers)
}

class AcceptanceByScoreThreshold{
    -_threshold: float
    +accept(papers)
}

AcceptanceStrategy <|--AcceptanceByPercentage
AcceptanceStrategy <|--AcceptanceByCount
AcceptanceStrategy <|--AcceptanceByScoreThreshold

'============ STATE PATTERN ============

abstract class SessionState{
    +name()

    +submit(session,paper)
    +closeSubmissions(session)

    +enterBid(session,paper,reviewer,interest)
    +closeBidAndAssign(session)

    +addReview(session,paper,reviewer,text,score)
    +closeReviewing(session)

    +selectPapers(session)
}

class ReceivingState{
    +name()
    +submit(session,paper)
    +closeSubmissions(session)
}
class BiddingState{
    +name()
    +enterBid(session, paper, reviewer,interest)
    +closeBidAndAssign(session)
}

class ReviewingState{
    +name()
    +addReview(session,paper,reviewer,text,score)
    +closeReviewing(session)
}

class SelectionState{
    +name()
    +selectPapers(session)
}

SessionState <|-- ReceivingState
SessionState <|-- BiddingState
SessionState <|-- ReviewingState
SessionState <|-- SelectionState

Session *-- SessionState
SelectionState --> AcceptanceStrategy : uses


@enduml